# cpp-labs

./: list.cpp  mainwindow.cpp  mainwindow.h  member.cpp
Lab1/Lab1Task1/: CMakeLists.txt  dialog.cpp  dialog.h  mainwindow.cpp
Lab1/Lab1Task2/: CMakeLists.txt  dialog.cpp  dialog.ui  mainwindow.h  mainwindow.ui  newstudent.h  student.cpp
Lab1/Lab1Task3&4/: Expression.cpp  main.cpp
Lab1Task1/: dialog.ui  mainwindow.cpp  mainwindow.h  mainwindow.ui  vector.cpp
Lab1Task2/: dialog.h  mainwindow.cpp  newstudent.cpp  vector.cpp
Lab1Task3&4/: CMakeLists.txt
Lab2/Lab2Task1.1/: dialog.ui  list.cpp  mainwindow.cpp  mainwindow.ui  mergesort.cpp  search.cpp  search.ui
Lab2/Lab2Task1.2/: CMakeLists.txt  height.cpp  height.ui  list.cpp  mainwindow.cpp  mainwindow.ui  member.h  newplayer.cpp  newplayer.ui  search.cpp  search.ui  weight.cpp  weight.ui
Lab2/Lab2Task1_1/: dialog.ui  mergesort.cpp
Lab2/Lab2Task2/: mainwindow.cpp  mainwindow.h  stack.cpp
Lab2/Lab2Task3/: CMakeLists.txt  expression.cpp  expression.h  mainwindow.cpp  mainwindow.h  mainwindow.ui  newexpression.cpp  newexpression.h  newexpression.ui  stack.cpp  vector.cpp
Lab2Task1/: abiturient.cpp  mainwindow.cpp  mainwindow.ui  search.cpp  search.h  search.ui
Lab2Task1.2(Not complete)/: CMakeLists.txt  member.cpp
Lab2Task1/Lab2Task1_1/: CMakeLists.txt  mainwindow.cpp
Lab2Task1_1/: abiturient.h  dialog.cpp  dialog.h  mainwindow.h
Lab2Task1_2/: CMakeLists.txt  height.h  mainwindow.cpp  mainwindow.h  mainwindow.ui  member.cpp  member.h  newplayer.h  newplayer.ui  search.cpp  search.h  weight.cpp  weight.h
Lab2Task2/: CMakeLists.txt  mainwindow.cpp  mainwindow.ui  stack.cpp
Lab2Task3/: CMakeLists.txt  expression.cpp  mainwindow.cpp
Lab3/Task1/: allocator.cpp  iterator.cpp  vector.cpp  vector.h
Lab3/Task2/: CMakeLists.txt  mainwindow.cpp  mainwindow.h  mainwindow.ui  newelement.cpp  newelement.h  newelement.ui  pair.cpp
Lab3/Task3/: CMakeLists.txt  (+5 more)
Lab3/Task4/: CMakeLists.txt  mainwindow.cpp  mainwindow.h  mainwindow.ui  resize.cpp  resize.h  resize.ui  vector.cpp
(+832 files in other folders)
